# GradioCalculator

./: README.md  main.py  pyproject.toml
js/: funcs.js
